--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
-<br>
-<br>
-<br>
-<br>
-<h1>Hola Mundo</h1>
+
+<section class="ae-container-fluid rk-main">
+    <app-portafolio></app-portafolio>
+</section>
+
 <app-footer></app-footer>
+
+
