--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 
 <section class="ae-container-fluid rk-main">
-    <app-portafolio></app-portafolio>
+    <!--<app-portafolio></app-portafolio> -->
+    <!--<app-about></app-about>-->
+    <app-items></app-items>
 </section>
 
 <app-footer></app-footer>
